--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 		"dev": "webpack serve --config ./bundler/webpack.dev.js"
 	},
 	"dependencies": {
-		"@babel/core": "^7.12.10",
-		"@babel/preset-env": "^7.12.11",
+		"@babel/core": "^7.15.0",
+		"@babel/preset-env": "^7.15.0",
 		"babel-loader": "^8.2.2",
-		"copy-webpack-plugin": "^7.0.0",
+		"copy-webpack-plugin": "^9.0.1",
 		"css-loader": "^6.2.0",
+		"gsap": "^3.7.1",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^5.0.0-alpha.7",
 		"mini-css-extract-plugin": "^1.3.4",
