--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"babel-loader": "^8.2.2",
 		"copy-webpack-plugin": "^9.0.1",
 		"css-loader": "^6.2.0",
+		"dat.gui": "^0.7.7",
 		"gsap": "^3.7.1",
 		"html-loader": "^1.3.2",
 		"html-webpack-plugin": "^5.0.0-alpha.7",
